[gd_scene load_steps=7 format=1]

[ext_resource path="res://Scenes/Menu/ufo_store.gd" type="Script" id=1]
[ext_resource path="res://Fonts/pixelated_title.fnt" type="BitmapFont" id=2]
[ext_resource path="res://Scenes/Menu/liftoff.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Menu/buy_milk.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Menu/buy_heart.gd" type="Script" id=5]

[sub_resource type="Animation" id=1]

resource/name = "slide_down"
length = 0.5
loop = false
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.3, 0.4, 0.45, 0.5 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -721 ), Vector2( 0, -299 ), Vector2( 0, -132 ), Vector2( 0, -25 ), Vector2( 0, -15 ), Vector2( 0, 0 ) ]
}

[node name="Control" type="Control" groups=[
"ufo_store",
]]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -721.0
margin/right = 1280.0
margin/bottom = -3.0
script/script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 227.0
margin/top = 143.0
margin/right = 1023.0
margin/bottom = 598.0

[node name="Label" type="Label" parent="Panel"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 140.0
margin/top = -19.0
margin/right = 414.0
margin/bottom = 20.0
custom_fonts/font = ExtResource( 2 )
text = "UFO Store"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="VButtonArray" type="VButtonArray" parent="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
flat = false
button/count = 0
button/min_button_size = -1.0
button/align = 1065353216

[node name="Liftoff" type="Button" parent="Panel/VButtonArray"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 107.0
margin/top = 475.0
margin/right = 378.0
margin/bottom = 525.0
custom_fonts/font = ExtResource( 2 )
disabled = true
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BTTN_LIFTOFF"
flat = false
clip_text = true
script/script = ExtResource( 3 )

[node name="Return" type="Button" parent="Panel/VButtonArray"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 402.0
margin/top = 475.0
margin/right = 684.0
margin/bottom = 525.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BTTN_BACK"
flat = false

[node name="Milk_button" type="Button" parent="Panel/VButtonArray"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 442.0
margin/top = 141.0
margin/right = 699.0
margin/bottom = 373.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BUY_MILK"
flat = false
script/script = ExtResource( 4 )

[node name="Milk_Label" type="Label" parent="Panel/VButtonArray/Milk_button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -1.0
margin/top = 246.0
margin/right = 254.0
margin/bottom = 322.0
custom_fonts/font = ExtResource( 2 )
text = "0000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Heart_button" type="Button" parent="Panel/VButtonArray"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 86.0
margin/top = 141.0
margin/right = 368.0
margin/bottom = 373.0
custom_fonts/font = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "BUY_HEART"
flat = false
script/script = ExtResource( 5 )

[node name="Heart_Label" type="Label" parent="Panel/VButtonArray/Heart_button"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 246.0
margin/right = 257.0
margin/bottom = 322.0
custom_fonts/font = ExtResource( 2 )
text = "0000"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/slide_down = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[connection signal="pressed" from="Panel/VButtonArray/Liftoff" to="Panel/VButtonArray/Liftoff" method="_on_Button_pressed"]

[connection signal="pressed" from="Panel/VButtonArray/Return" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Panel/VButtonArray/Milk_button" to="Panel/VButtonArray/Milk_button" method="_on_Milk_button_pressed"]

[connection signal="pressed" from="Panel/VButtonArray/Heart_button" to="Panel/VButtonArray/Heart_button" method="_on_Heart_button_pressed"]


